# servicenow-docker-mid-server

./: .gitignore  README.md  pdi_data.csv  pyproject.toml  tokyo_data.csv  utah_data.csv  vancouver_data.csv  vancouver_dataset_dump.csv  washingtondc_data.csv  washingtondc_dataset_dump.csv  xanadu_data.csv  xanadu_dataset_dump.csv  yokohama_data.csv  yokohama_dataset_dump.csv  zurich_data.csv  zurich_dataset_dump.csv
.github/workflows/: main.yml  servicenow-midserver-docker.yml  servicenow-pdi-midserver-docker.yml  servicenow-relnotes-scraper.yml  vancouver-servicenow-midserver-docker.yml  washingtondc-servicenow-midserver-docker.yml  xanadu-servicenow-midserver-docker.yml  yokohama-servicenow-midserver-docker.yml  zurich-servicenow-midserver-docker.yml
datasets/: tokyo_data.csv  utah_data.csv
run/: README.md  mid.env.example
src/servicenow-docker-mid/mid/: docker_builder.py
src/servicenow-releasenotes/release-notes-scraper/: release_notes_scraper.py
